versioned_docs/version-2.0.0-beta.1/what-is-ratify.mdx
---
title: What is Ratify
sidebar_position: 1
---

Ratify is a verification engine as a binary executable and on Kubernetes which enables verification of artifact security metadata and admits for deployment only those that comply with policies you create.

[![Go Report Card](https://goreportcard.com/badge/github.com/notaryproject/ratify)](https://goreportcard.com/report/github.com/notaryproject/ratify)
[![OpenSSF Scorecard](https://api.securityscorecards.dev/projects/github.com/notaryproject/ratify/badge)](https://api.securityscorecards.dev/projects/github.com/notaryproject/ratify)

## ⚠️ Development Notice: Main Branch Under Active v2 Development

:::important
The `main` branch is currently under **active development for Ratify v2**.
:::

:::caution
During this period, it may be **unstable or broken**.
:::

If you are:
- Contributing new features
- Fixing bugs
- Building against a v1 version of Ratify

Please use the [`v1-dev` branch](https://github.com/notaryproject/ratify/tree/v1-dev) and refer to previous released documentation.

We appreciate your patience as we work toward a more powerful and flexible Ratify v2! 🚀
Stay tuned for updates and migration guides.

## Table of Contents

- [Community Meetings](#community-meetings)
- [Code of Conduct](#code-of-conduct)
- [Release Management](#release-management)
- [Licensing](#licensing)
- [Trademark](#trademark)

## Community meetings

- Agenda: [https://hackmd.io/ABueHjizRz2iFQpWnQrnNA](https://hackmd.io/ABueHjizRz2iFQpWnQrnNA)
- We hold a weekly Ratify community meeting on Thurs 12:00 - 1:00 AM (UTC). 
Get Ratify Community Meeting Calendar [here](https://calendar.google.com/calendar/u/0?cid=OWJjdTF2M3ZiZGhubm1mNmJyMDhzc2swNTRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ).
- We meet regularly to discuss and prioritize issues. The meeting may get cancelled due to holidays, all cancellation will be posted to meeting notes prior to the meeting.
- Reach out on Slack at [cloud-native.slack.com#ratify](https://cloud-native.slack.com/archives/C03T3PEKVA9). If you're not already a member of cloud-native slack channel, first add [yourself here](https://communityinviter.com/apps/cloud-native/cncf).

## Pull Request Review Series
- We hold a weekly Ratify Pull Request Review Series on Mondays 5-6 pm PST.  
- People are able to use this time to walk through any Pull Requests and seek feedback from others in the Community.  If there are no PR to review, the meeting will be cancelled during that week.
- Reach out on Slack if you want to reserve a session for review or during our weekly community meetings.

## Code of Conduct

Ratify follows the [CNCF Code of Conduct](https://github.com/cncf/foundation/blob/master/code-of-conduct.md).

## Release Management

The Ratify release process is defined in [RELEASES.md](https://github.com/notaryproject/ratify/blob/main/RELEASES.md).

## Licensing

This project is released under the [Apache-2.0 License](https://github.com/notaryproject/ratify/blob/main/LICENSE).

## Trademark

This project may contain trademarks or logos for projects, products, or services. Authorized use of Microsoft trademarks or logos is subject to and must follow [Microsoft's Trademark & Brand Guidelines][microsoft-trademark]. Use of Microsoft trademarks or logos in modified versions of this project must not cause confusion or imply Microsoft sponsorship. Any use of third-party trademarks or logos are subject to those third-party's policies.

[microsoft-trademark]: https://www.microsoft.com/legal/intellectualproperty/trademarks
